<resources>
    <string name="app_name">NewUplift</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_back">Welcome Back!</string>
    <string name="logout_complete">You\'ve been logged out successfully.</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="app_logo">Uplift</string>
    <string name="default_quote_text">Yesterday is histor, the future is a mystery but today is a gift, that is why its called the present.</string>
</resources>